{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 6,
  "lineage": "5b39ec5a-34e7-5e5f-cd0b-48c399463f65",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.26.185.107",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-08-17T17:56:06.545-07:00",
            "id": "projects/project-f50a094d-d02b-40c5-b0d/regions/us-east1/addresses/portfolio-backend-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "portfolio-backend-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "project-f50a094d-d02b-40c5-b0d",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-f50a094d-d02b-40c5-b0d/regions/us-east1/addresses/portfolio-backend-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-08-17T17:57:09.550-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-f50a094d-d02b-40c5-b0d/global/firewalls/allow-http-https",
            "log_config": [],
            "name": "allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/project-f50a094d-d02b-40c5-b0d/global/networks/portfolio-vpc",
            "priority": 1000,
            "project": "project-f50a094d-d02b-40c5-b0d",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-f50a094d-d02b-40c5-b0d/global/firewalls/allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "portfolio-backend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-08-17T17:57:09.533-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-f50a094d-d02b-40c5-b0d/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/project-f50a094d-d02b-40c5-b0d/global/networks/portfolio-vpc",
            "priority": 1000,
            "project": "project-f50a094d-d02b-40c5-b0d",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-f50a094d-d02b-40c5-b0d/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "portfolio-backend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260817",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-f50a094d-d02b-40c5-b0d/zones/us-east1-b/disks/portfolio-backend"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-f50a094d-d02b-40c5-b0d/zones/us-east1-b/instances/portfolio-backend",
            "instance_id": "1834642695653298952",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "diegoall:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIHOJJJsJMuLysHdC0woBUDU3l4OA+H36wZWAimlRop/L diegoall@portfolio-backend\n"
            },
            "metadata_fingerprint": "fRouOA3fL-g=",
            "metadata_startup_script": "#!/bin/bash\nset -e\n\napt-get update\napt-get install -y ca-certificates curl gnupg\n\ninstall -m 0755 -d /etc/apt/keyrings\ncurl -fsSL https://download.docker.com/linux/debian/gpg -o /etc/apt/keyrings/docker.asc\nchmod a+r /etc/apt/keyrings/docker.asc\n\necho \"deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/debian $(. /etc/os-release \u0026\u0026 echo \"$VERSION_CODENAME\") stable\" | tee  [...]
            "name": "portfolio-backend",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.26.185.107",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-f50a094d-d02b-40c5-b0d/global/networks/portfolio-vpc",
                "network_ip": "10.142.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-f50a094d-d02b-40c5-b0d/regions/us-east1/subnetworks/portfolio-vpc",
                "subnetwork_project": "project-f50a094d-d02b-40c5-b0d"
              }
            ],
            "project": "project-f50a094d-d02b-40c5-b0d",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-f50a094d-d02b-40c5-b0d/zones/us-east1-b/instances/portfolio-backend",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "portfolio-backend"
            ],
            "tags_fingerprint": "SwLLqJyDTYc=",
            "zone": "us-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.static_ip",
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/project-f50a094d-d02b-40c5-b0d/global/networks/portfolio-vpc",
            "mtu": 0,
            "name": "portfolio-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "493179604290114377",
            "project": "project-f50a094d-d02b-40c5-b0d",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-f50a094d-d02b-40c5-b0d/global/networks/portfolio-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}